[gd_scene load_steps=10 format=3 uid="uid://dc123j5knxl0c"]

[ext_resource type="Script" path="res://Scenes/Game/GameUI.gd" id="1_0qvdn"]
[ext_resource type="Texture2D" uid="uid://btvp03kkty26d" path="res://Images/Pieces/Amalgam.png" id="1_7kvfo"]
[ext_resource type="Texture2D" uid="uid://b35vuuhy4io3a" path="res://Images/GreenCircle.png" id="2_gpn1f"]
[ext_resource type="Texture2D" uid="uid://ofsnkg752j6f" path="res://Images/Pieces/Amber.png" id="2_mfngm"]
[ext_resource type="Texture2D" uid="uid://cp1pw5yntefss" path="res://Images/Pieces/Jade.png" id="3_kyesd"]
[ext_resource type="Texture2D" uid="uid://dsemoi6pmoype" path="res://Images/Pieces/Pearl.png" id="4_r38ji"]
[ext_resource type="Texture2D" uid="uid://bqdxyjmyas06a" path="res://Images/Pieces/Ruby.png" id="5_jqv58"]
[ext_resource type="Texture2D" uid="uid://bmhsimqiocksq" path="res://Images/Pieces/Void.png" id="6_ix8n3"]
[ext_resource type="Texture2D" uid="uid://l2bmkaa361ye" path="res://Images/Pieces/Portal.png" id="7_5h3q3"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -13.0
offset_right = -9.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0qvdn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FocusAbility" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 1683.0
offset_top = 835.0
offset_right = 1910.0
offset_bottom = 1062.0
texture = ExtResource("2_gpn1f")
expand_mode = 1

[node name="PieceList" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 111.0
offset_bottom = 540.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PieceList"]
layout_mode = 2
alignment = 1

[node name="SpacerTop2" type="Control" parent="CanvasLayer/PieceList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PieceList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpacerTop" type="Control" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AmalgamIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_7kvfo")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/AmalgamIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "1/1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmalgamButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/AmalgamIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="AmalgamLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Amalgam"
horizontal_alignment = 1

[node name="VoidIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_ix8n3")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/VoidIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "1/1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VoidButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/VoidIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="VoidLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Void"
horizontal_alignment = 1

[node name="AmberIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_mfngm")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/AmberIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "2/2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmberButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/AmberIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="AmberLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Amber"
horizontal_alignment = 1

[node name="JadeIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_kyesd")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/JadeIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "2/2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JadeButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/JadeIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="JadeLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Jade"
horizontal_alignment = 1

[node name="PearlIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_r38ji")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/PearlIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "2/2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PearlButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/PearlIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="PearlLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Pearl"
horizontal_alignment = 1

[node name="RubyIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_jqv58")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/RubyIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "2/2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RubyButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/RubyIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="RubyLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Ruby"
horizontal_alignment = 1

[node name="PortalIcon" type="TextureRect" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_5h3q3")
expand_mode = 4

[node name="Count" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/PortalIcon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "2/2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortalButton" type="Button" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/PortalIcon"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "-?-
"

[node name="PortalLBL" type="Label" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Portal"
horizontal_alignment = 1

[node name="SpacerBottom" type="Control" parent="CanvasLayer/PieceList/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpacerTop" type="Control" parent="CanvasLayer/PieceList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PieceDescription" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 120.0
offset_top = 80.0
offset_right = 424.0
offset_bottom = 159.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PieceDescription"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/PieceDescription/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PieceDescription/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/PieceDescription/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2

[node name="Pop_Title" type="Label" parent="CanvasLayer/PieceDescription/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "PIECE NAME"
autowrap_mode = 3

[node name="Pop_Details" type="Label" parent="CanvasLayer/PieceDescription/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
text = "Description Here..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Control" type="Control" parent="CanvasLayer/PieceDescription/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="CanvasLayer/PieceDescription/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Ability" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -183.0
offset_right = -64.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0

[node name="AbilityIcon" type="TextureRect" parent="CanvasLayer/Ability"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_7kvfo")
expand_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Ability"]
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/Ability/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/Ability/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="AbilityName" type="Label" parent="CanvasLayer/Ability/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -15.5
offset_right = 59.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderSmall"
text = "Launch
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/Ability/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UseAbility" type="Button" parent="CanvasLayer/Ability"]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 2
toggle_mode = true

[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/AmalgamIcon/AmalgamButton" to="." method="_on_amalgam_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/VoidIcon/VoidButton" to="." method="_on_void_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/AmberIcon/AmberButton" to="." method="_on_amber_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/JadeIcon/JadeButton" to="." method="_on_jade_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/PearlIcon/PearlButton" to="." method="_on_pearl_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/RubyIcon/RubyButton" to="." method="_on_ruby_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PieceList/HBoxContainer/VBoxContainer/VBoxContainer/PortalIcon/PortalButton" to="." method="_on_portal_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Ability/UseAbility" to="." method="_on_use_ability_toggled"]
